[package]
name = "stremio-discord-rpc"
version = "0.3.0"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
urlencoding = "2"
